# LLaVA

./: pyproject.toml
finetune/: run_reward_model.py
llava/model/language_model/: llava_reward.py
