[build-system]
requires = ["setuptools>=75.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.2.2.post1"
description = "Towards GPT-4 like large language and visual assistant."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch==2.5.0", "torchvision==0.20.0",
    "transformers==4.37.2", "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid==1.0.13",
    "accelerate==0.21.0", "peft==0.13.2", "bitsandbytes==0.44.1",
    "pydantic==2.9.2", "markdown2==2.5.1", "numpy==1.26.4", "scikit-learn==1.2.2",
    "gradio==4.16.0", "gradio_client==0.8.1",
    "requests==2.32.3", "httpx==0.24.0", "uvicorn==0.32.0", "fastapi==0.110.3",
    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
]

[project.optional-dependencies]
train = ["deepspeed==0.15.3", "ninja==1.11.1.1", "wandb"]
build = ["build", "twine"]

[project.urls]
"Homepage" = "https://llava-vl.github.io"
"Bug Tracker" = "https://github.com/haotian-liu/LLaVA/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
